Update dot_ssr/output-profiles/High%20Quality%20Intermediate.conf Update scripts/executable_flameshot-b2 Rename dot_ssr/output-profiles/a.conf to dot_ssr/output-profiles/a.conf.tmpl

--- a/dot_ssr/output-profiles/High%20Quality%20Intermediate.conf
+++ b/dot_ssr/output-profiles/High%20Quality%20Intermediate.conf
@@ -6,7 +6,7 @@ audio_kbit_rate=128
 audio_options=
 container=webm
 container_av=3g2
-file=/home/aagaming/Videos/srr.webm
+file=/home/{{ .chezmoi.username }}/Videos/srr.webm
 separate_files=true
 video_allow_frame_skipping=true
 video_codec=vp8
