--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -268,10 +268,10 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
+date = " %a %b %d"
 date-alt = " %Y-%m-%d"
 
-time = %H:%M
+time = "%I:%M %p"
 time-alt = %H:%M:%S
 
 format-prefix = 
@@ -337,9 +337,9 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
-adapter = ADP1
-full-at = 98
+battery = BAT1
+adapter = ACAD
+full-at = 100
 
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
