--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -34,7 +34,8 @@ width = 100%
 height = 27
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+;radius = 6.0
+radius = 0.0
 fixed-center = false
 
 background = ${colors.background}
@@ -43,11 +44,11 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 4
+border-size = 0
 border-color = #00000000
 
 padding-left = 0
-padding-right = 2
+padding-right = 0
 
 module-margin-left = 1
 module-margin-right = 2
@@ -61,7 +62,10 @@ modules-center =
 modules-right = polytiramisu filesystem pulseaudio memory cpu wlan eth battery temperature date powermenu
 
 tray-position = right
-tray-padding = 2
+;tray-detached = true
+;tray-maxsize = 16
+;tray-offset-x = -6
+tray-padding = 4
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
