--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -20,6 +20,8 @@ font pango:monospace 10
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
+exec --no-startup-id autotiling -w 1 3 5 7 9
+
 exec --no-startup-id feh --bg-scale /usr/share/wallpapers/MilkyWay/contents/images/5120x2880.png
 
 # Start XDG autostart .desktop files using dex. See also
@@ -90,10 +92,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+# bindsym $mod+Shift+j move left
+# bindsym $mod+Shift+k move down
+# bindsym $mod+Shift+l move up
+# bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -203,6 +205,7 @@ hide_edge_borders both
 gaps inner 10
 
 smart_gaps on
+
 
 # bindsym $mod+r mode "resize"
 
