--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -20,7 +20,8 @@ font pango:monospace 10
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
-exec --no-startup-id autotiling -w 1 3 5 7 9
+# exec --no-startup-id autotiling -w 1 3 5 7 9
+
 
 exec --no-startup-id feh --bg-scale /usr/share/wallpapers/MilkyWay/contents/images/5120x2880.png
 
@@ -98,10 +99,10 @@ bindsym $mod+Right focus right
 # bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+Left exec --no-startup-id i3l move left
+bindsym $mod+Shift+Down exec --no-startup-id i3l move down
+bindsym $mod+Shift+Up exec --no-startup-id i3l move up
+bindsym $mod+Shift+Right exec --no-startup-id i3l move right
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -173,6 +174,17 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+set $i3l autosplit to workspace $ws1
+set $i3l autosplit to workspace $ws2
+set $i3l autosplit to workspace $ws3
+set $i3l autosplit to workspace $ws4
+set $i3l autosplit to workspace $ws5
+set $i3l autosplit to workspace $ws6
+set $i3l autosplit to workspace $ws7
+set $i3l autosplit to workspace $ws8
+set $i3l autosplit to workspace $ws9
+set $i3l autosplit to workspace $ws10
+
 # resize window (you can also use the mouse for that)
 # mode "resize" {
 #         # These bindings trigger as soon as you enter the resize mode
@@ -214,3 +226,5 @@ smart_gaps on
 # bar {
 #         status_command i3status
 # }
+
+exec --no-startup-id i3-layouts
