--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -36,7 +36,7 @@ height = 27
 ;offset-y = 1%
 ;radius = 6.0
 radius = 0.0
-fixed-center = false
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -57,9 +57,9 @@ font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = i3
-modules-center = 
-modules-right = polytiramisu filesystem pulseaudio memory cpu wlan eth battery temperature date powermenu
+modules-left = i3 polytiramisu
+modules-center = xwindow
+modules-right = filesystem pulseaudio memory cpu wlan eth battery temperature date powermenu
 
 tray-position = right
 ;tray-detached = true
@@ -91,7 +91,7 @@ tail = true
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:50:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
