--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -12,6 +12,8 @@
 set $mod Mod4
 set $alt Mod1
 
+exec --no-startup-id xrdb -merge $XDG_CONFIG_HOME/x11/Xresources
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 10
@@ -76,7 +78,7 @@ bindsym $mod+d exec --no-startup-id "rofi -modi drun,run -show drun"
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 bindsym $alt+q exec --no-startup-id "firefox-developer-edition"
-bindsym $alt+Shift+q exec "chromium"
+bindsym $alt+Shift+q exec --no-startup-id "chromium"
 bindsym $alt+d exec --no-startup-id "discord"
 bindsym $alt+c exec --no-startup-id "codium"
 bindsym $alt+e exec --no-startup-id "element-desktop"
