--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -33,6 +33,8 @@ exec --no-startup-id dex --autostart --environment i3
 
 exec --no-startup-id pipewire
 
+exec --no-startup-id $XDG_CONFIG_HOME/i3/i3-alternating-layout/alternating_layouts.py
+
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
