--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -29,7 +29,7 @@ exec --no-startup-id feh --bg-scale /usr/share/wallpapers/MilkyWay/contents/imag
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
-exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id dex --autostart --environment i3 --search-paths $XDG_CONFIG_HOME/autostart
 
 exec --no-startup-id pipewire
 
