--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -25,7 +25,7 @@ font pango:monospace 10
 # exec --no-startup-id autotiling -w 1 3 5 7 9
 
 
-exec --no-startup-id feh --bg-scale /usr/share/wallpapers/MilkyWay/contents/images/5120x2880.png
+exec --no-startup-id feh --bg-scale $HOME/wallpapers/MilkyWay.png
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -40,17 +40,17 @@ exec --no-startup-id $XDG_CONFIG_HOME/i3/i3-alternating-layout/alternating_layou
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+#exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-exec --no-startup-id blueman-applet
+#exec --no-startup-id nm-applet
+#exec --no-startup-id blueman-applet
 
 exec --no-startup-id picom --experimental-backends
-exec --no-startup-id copyq
-exec --no-startup-id sh -c "mons -a -x $HOME/scripts/monitor.sh"
-exec --no-startup-id flameshot
+#exec --no-startup-id copyq
+#exec --no-startup-id sh -c "mons -a -x $HOME/scripts/monitor.sh"
+#exec --no-startup-id flameshot
 
 exec_always --no-startup-id ~/scripts/bar
 
@@ -79,7 +79,7 @@ bindsym $mod+d exec --no-startup-id "rofi -modi drun,run -show drun"
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
-bindsym $alt+q exec --no-startup-id "firefox-developer-edition"
+bindsym $alt+q exec --no-startup-id "firefox"
 bindsym $alt+Shift+q exec --no-startup-id "chromium"
 bindsym $alt+d exec --no-startup-id "discord"
 bindsym $alt+c exec --no-startup-id "codium"
@@ -229,6 +229,6 @@ for_window [title="^Android Emulator*"] floating enable
 #         status_command i3status
 # }
 
-exec --no-startup-id light -S 60
+#exec --no-startup-id light -S 60
 
-exec --no-startup-id sleep 10 && $HOME/scripts/gitea-notifyd
+#exec --no-startup-id sleep 10 && $HOME/scripts/gitea-notifyd
