--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -114,6 +114,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+mount-1 = /home
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
@@ -413,10 +414,10 @@ menu-0-1-exec = menu-open-2
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo openrc-shutdown -r 0
+menu-1-1-exec = doas /sbin/openrc-shutdown -r 0
 
 menu-2-0 = power off
-menu-2-0-exec = sudo openrc-shutdown -p 0
+menu-2-0-exec = doas /sbin/openrc-shutdown -p 0
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
