--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -25,15 +25,17 @@ font pango:monospace 10
 # exec --no-startup-id autotiling -w 1 3 5 7 9
 
 
-exec --no-startup-id feh --bg-scale $HOME/wallpapers/MilkyWay.png
+exec_always --no-startup-id feh --bg-fill ~/wallpapers/nikocropnoartifacts.png ~/wallpapers/MilkyWay.png
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
-exec --no-startup-id dex --autostart --environment i3 --search-paths $XDG_CONFIG_HOME/autostart
+exec --no-startup-id dex --autostart --environment i3
 
-exec --no-startup-id pipewire
+#exec --no-startup-id pipewire
 
-exec --no-startup-id $XDG_CONFIG_HOME/i3/i3-alternating-layout/alternating_layouts.py
+exec_always --no-startup-id $XDG_CONFIG_HOME/i3/i3-alternating-layout/alternating_layouts.py
+
+exec --no-startup-id unclutter -idle 10
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -52,7 +54,10 @@ exec --no-startup-id picom --experimental-backends
 #exec --no-startup-id sh -c "mons -a -x $HOME/scripts/monitor.sh"
 #exec --no-startup-id flameshot
 
-exec_always --no-startup-id ~/scripts/bar
+exec --no-startup-id echo "$0: DESKTOP_AUTOSTART_ID $DESKTOP_AUTOSTART_ID, registering with org.gnome.SessionManager"
+exec --no-startup-id dbus-send --session --print-reply=literal --dest=org.gnome.SessionManager "/org/gnome/SessionManager" org.gnome.SessionManager.RegisterClient "string:i3" "string:$DESKTOP_AUTOSTART_ID"
+
+exec_always --no-startup-id sleep 2 && ~/scripts/bar
 
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -184,31 +189,31 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
+bindsym $mod+r mode "resize"
 # resize window (you can also use the mouse for that)
-# mode "resize" {
-#         # These bindings trigger as soon as you enter the resize mode
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
 
-#         # Pressing left will shrink the window’s width.
-#         # Pressing right will grow the window’s width.
-#         # Pressing up will shrink the window’s height.
-#         # Pressing down will grow the window’s height.
-#         bindsym j resize shrink width 10 px or 10 ppt
-#         bindsym k resize grow height 10 px or 10 ppt
-#         bindsym l resize shrink height 10 px or 10 ppt
-#         bindsym semicolon resize grow width 10 px or 10 ppt
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
 
-#         # same bindings, but for the arrow keys
-#         bindsym Left resize shrink width 10 px or 10 ppt
-#         bindsym Down resize grow height 10 px or 10 ppt
-#         bindsym Up resize shrink height 10 px or 10 ppt
-#         bindsym Right resize grow width 10 px or 10 ppt
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
 
-#         # back to normal: Enter or Escape or $mod+r
-#         bindsym Return mode "default"
-#         bindsym Escape mode "default"
-#         bindsym $mod+r mode "default"
-# }
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+r mode "default"
+}
 
 default_border pixel 0
 
