--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -56,8 +56,9 @@ module-margin-right = 2
 font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
+font-3 = Noto Sans CJK JP:size=10:pixelsize=10;1
 
-modules-left = i3 polytiramisu
+modules-left = i3 mpris-prev mpris-play-pause mpris-next mpris polytiramisu
 modules-center = xwindow
 modules-right = filesystem pulseaudio memory cpu wlan eth battery temperature date powermenu
 
@@ -82,6 +83,31 @@ tray-padding = 4
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[module/mpris]
+type = custom/script
+tail = true
+exec = ~/repos/polybar-mpris/scroll_status.sh aa
+
+[module/mpris-prev]
+type = custom/script
+#exec = echo "玲"
+exec = echo ""
+click-left = playerctl previous
+
+[module/mpris-play-pause]
+type = custom/ipc
+#hook-0 = echo ""
+hook-0 = echo ""
+#hook-1 = echo ""
+hook-1 = echo ""
+initial = 1
+click-left = playerctl play-pause
+
+[module/mpris-next]
+type = custom/script
+exec = echo ""
+click-left = playerctl next
+
 [module/polytiramisu]
 type = custom/script
 # Path to where you put polytiramisu.sh:
@@ -91,7 +117,7 @@ tail = true
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:50:...%
+label = %title:0:60:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -114,7 +140,8 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-mount-1 = /home
+mount-1 = /var/vmpool
+mount-2 = /home
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
