--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -277,14 +277,14 @@ refresh-rate = 0
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true
+detect-transient = false
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true
+detect-client-leader = false
 
 # Resize damaged region by a specific number of pixels. 
 # A positive value enlarges it while a negative one shrinks it. 
