--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -441,10 +441,12 @@ menu-0-1-exec = menu-open-2
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = doas /sbin/openrc-shutdown -r 0
+menu-1-1-exec = /usr/bin/systemctl reboot
+#menu-1-1-exec = doas /sbin/openrc-shutdown -r 0
 
 menu-2-0 = power off
-menu-2-0-exec = doas /sbin/openrc-shutdown -p 0
+menu-2-0-exec = /usr/bin/systemctl poweroff
+#menu-2-0-exec = doas /sbin/openrc-shutdown -p 0
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
