--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -227,7 +227,7 @@ smart_gaps on
 
 
 for_window [title="^Android Emulator*"] floating enable
-for_window [class="zenity"] floating enable
+for_window [class="(?i)Zenity"] floating enable
 
 # bindsym $mod+r mode "resize"
 
