configs & fix gpg

--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -5,8 +5,9 @@ disabledTrayIcon=false
 drawColor=#ff0000
 drawThickness=3
 ignoreUpdateToVersion=11.0.0
-savePath=~/Pictures
+savePath=/home/botato
 savePathFixed=false
+setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showStartupLaunchMessage=true
 startupLaunch=true
 uploadCommand=~/scripts/flameshot-b2
