Update dot_zsh/dot_zshrc Update private_dot_config/chezmoi/private_chezmoi.toml Update private_dot_config/flameshot/flameshot.ini Update private_dot_config/i3/config Update private_dot_config/polybar/config Update private_dot_config/spicetify/config-xpui.ini

--- a/private_dot_config/chezmoi/private_chezmoi.toml
+++ b/private_dot_config/chezmoi/private_chezmoi.toml
@@ -3,7 +3,7 @@
     autoPush = true
 
 [data]
-    email = "botatostuff@gmail.com"
+    email = "botatooo@protonmail.com"
 
 [diff]
     format = "git"
