--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -5,12 +5,12 @@ disabledTrayIcon=false
 drawColor=#ff0000
 drawThickness=3
 ignoreUpdateToVersion=11.0.0
-savePath=/home/botato
+savePath=/home/botato/Pictures
 savePathFixed=false
 setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showStartupLaunchMessage=true
 startupLaunch=true
-uploadCommand=~/scripts/flameshot-b2
+uploadCommand=/home/botato/scripts/flameshot-b2
 
 [Shortcuts]
 TYPE_ARROW=A
