--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -22,7 +22,7 @@ background = #E6272822
 ; background-alt = #E6454545
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
-foreground-alt = #555
+foreground-alt = #d3d3d3
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
@@ -31,7 +31,7 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:HDMI-1}
 enable-ipc = true
 width = 100%
-height = 27
+height = 36
 ;offset-x = 1%
 ;offset-y = 1%
 ;radius = 6.0
@@ -60,7 +60,7 @@ font-3 = Noto Sans CJK JP:size=10:pixelsize=10;1
 
 modules-left = i3 mpris-prev mpris-play-pause mpris-next mpris polytiramisu
 modules-center = xwindow
-modules-right = filesystem pulseaudio memory cpu wlan eth battery temperature date powermenu
+modules-right = filesystem pulseaudio memory cpu wlan battery temperature date powermenu
 
 tray-position = right
 ;tray-detached = true
