--- a/private_dot_config/spicetify/config-xpui.ini
+++ b/private_dot_config/spicetify/config-xpui.ini
@@ -1,29 +1,29 @@
-[Patch]
-
 [Setting]
-spotify_path            = /opt/spotify ; from 'spotify' aur package
-prefs_path              = ~/.config/spotify/prefs
+inject_css              = 1
+overwrite_assets        = 0
+spotify_launch_flags    = 
+prefs_path              = /home/botato/.config/spotify/prefs
 current_theme           = 
 replace_colors          = 1
-overwrite_assets        = 0
 check_spicetify_upgrade = 0
+spotify_path            = /opt/spotify
 color_scheme            = 
-inject_css              = 1
-spotify_launch_flags    = 
 
 [Preprocesses]
-disable_sentry        = 1
-disable_ui_logging    = 1
 remove_rtl_rule       = 1
 expose_apis           = 1
 disable_upgrade_check = 1
+disable_sentry        = 1
+disable_ui_logging    = 1
 
 [AdditionalOptions]
+experimental_features = 1
 extensions            = 
 custom_apps           = marketplace
 sidebar_config        = 1
 home_config           = 1
-experimental_features = 1
+
+[Patch]
 
 ; DO NOT CHANGE!
 [Backup]
