Update private_dot_config/flameshot/flameshot.ini Add private_dot_config/rofi/config.rasi

--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -5,12 +5,12 @@ disabledTrayIcon=false
 drawColor=#ff00ff
 drawThickness=3
 ignoreUpdateToVersion=11.0.0
-savePath=/home/botato/memes
+savePath={{ $homeDir }}/memes
 savePathFixed=false
 setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showStartupLaunchMessage=true
 startupLaunch=true
-uploadCommand=/home/botato/scripts/flameshot-b2
+uploadCommand={{ $homeDir }}/scripts/flameshot-b2
 
 [Shortcuts]
 TYPE_ARROW=A
