--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 background_opacity 0.8
-font_family MesloLGS NF
+font_family -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1
 
 #breaks kde stuff
 remember_window_size no
