--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -4,13 +4,13 @@ contrastOpacity=188
 disabledTrayIcon=false
 drawColor=#ff00ff
 drawThickness=3
-ignoreUpdateToVersion=11.0.0
-savePath={{ $homeDir }}/memes
+ignoreUpdateToVersion=12.0.0
+savePath=/home/botato/memes
 savePathFixed=false
 setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showStartupLaunchMessage=true
 startupLaunch=true
-uploadCommand={{ $homeDir }}/scripts/flameshot-b2
+uploadCommand=/home/botato/scripts/flameshot-b2
 
 [Shortcuts]
 TYPE_ARROW=A
