--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -44,7 +44,7 @@ alert = ${self.nord11}
 disabled = ${self.nord10}
 
 
-[bar/main]
+[bar/top]
 width = 100%
 height = 36
 radius = 0
@@ -65,15 +65,14 @@ foreground = ${colors.foreground}
 separator = |
 separator-foreground = ${colors.nord10}
 
-font-0 = JetBrainsMono Nerd Font:size=10;1
-font-1 = unifont:size=10:fontformat=truetype:antialias=false;1
+font-0 = JetBrainsMono Nerd Font:size=11;1
+font-1 = unifont:size=11:fontformat=truetype:antialias=false;1
 font-2 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;0
-font-3 = Material Icons:size=11;0
-font-4 = Noto Sans CJK JP:size=10;1
+font-3 = Noto Sans CJK JP:size=10;1
 
-modules-left = i3 mpris-prev mpris-play-pause mpris-next mpris polytiramisu
+modules-left = i3 polytiramisu
 modules-center = xwindow
-modules-right = filesystem screen pulseaudio battery memory cpu temperature wlan date powermenu
+modules-right = date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -87,6 +86,17 @@ enable-ipc = true
 ; wm-restack = i3
 
 ; override-redirect = true
+
+[bar/bottom]
+inherit = bar/top
+monitor = eDP-1
+bottom = true
+tray-position = right
+padding-left = 2
+modules-left = mpris mpris-prev mpris-play-pause mpris-next
+modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu temperature wlan
+modules-right =
+
 
 
 [module/battery]
@@ -120,41 +130,56 @@ animation-charging-4 = 
 animation-charging-5 =  
 animation-charging-6 =  
 animation-charging-foreground = ${colors.nord14}
-animation-charging-framerate = 500
+animation-charging-framerate = 400
+
+
+[module/kbd-backlight]
+type = custom/script
+tail = true
+format = <label>
+exec = ~/.config/polybar/scripts/kbd-backlight.sh
 
 
 [module/screen]
 type = internal/backlight
 card = intel_backlight
-
+;output = HDMI-1
+output = eDP-1
 format = <ramp> <label>
 label = %percentage%%
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
-ramp-10 = 
-ramp-11 = 
-ramp-12 = 
-ramp-13 = 
-ramp-14 = 
+#ramp-0 = 
+#ramp-1 = 
+#ramp-2 = 
+#ramp-3 = 
+#ramp-4 = 
+#ramp-5 = 
+#ramp-6 = 
+#ramp-7 = 
+#ramp-8 = 
+#ramp-9 = 
+#ramp-10 = 
+#ramp-11 = 
+#ramp-12 = 
+#ramp-13 = 
+#ramp-14 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-5 = 
+ramp-6 = 
 ramp-foreground = ${colors.primary}
 
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
-index-sort = false
+index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = ${colors.foreground}
@@ -168,7 +193,7 @@ label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
-label-unfocused-padding = 2
+label-visible-padding = ${self.label-focused-padding}
 
 label-visible = %index%
 label-visible-background = ${self.label-focused-background}
@@ -177,8 +202,9 @@ label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+label-urgent-background = ${colors.nord12}
+label-visible-underline = ${colors.alert}
+label-visible-padding = ${self.label-focused-padding}
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -188,7 +214,7 @@ label-urgent-padding = 1
 type = custom/text
 content = 
 content-foreground = ${colors.secondary}
-left-click = ~/.config/polybar/scripts/powermenu.sh
+click-left = "rofi -show p -modi p:rofi-power-menu -font 'JetBrainsMono Nerd Font 16' -width 20 -lines 6"
 
 
 [module/mpris]
@@ -197,7 +223,7 @@ type = custom/script
 tail = true
 interval = 1
 format = <label>
-exec = ~/repos/polybar-mpris/scroll_status.sh main
+exec = ~/repos/polybar-mpris/scroll_status.sh top
 
 
 [module/mpris-prev]
@@ -243,7 +269,6 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-
 label-mounted = %{F#88c0d0}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
@@ -256,7 +281,7 @@ type = internal/pulseaudio
 format-volume = <ramp-volume> <label-volume>
 label-volume = %percentage%%
 
-format-muted-prefix = "婢 "
+format-muted-prefix = "ﱝ "
 format-muted-prefix-foreground = ${colors.disabled}
 label-muted = %percentage%%
 label-muted-foreground = ${colors.nord9}
@@ -303,7 +328,7 @@ type = internal/cpu
 interval = 1
 
 label = %percentage%%
-format-prefix = "閭 "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 
 
@@ -321,7 +346,7 @@ label-disconnected = disconnected
 inherit = network-base
 interface-type = wireless
 
-label-connected = %{F#88c0d0} %{F-} %essid% %local_ip%
+label-connected = %{F#88c0d0}直 %{F-} %essid% %local_ip%
 
 
 [module/eth]
@@ -335,8 +360,8 @@ label-connected = %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %H:%M:%S
+date-alt = %Y-%m-%d
 
 label = %date%
 label-foreground = ${colors.primary}
