--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -1,5 +1,7 @@
+include ./nord.conf
+
 background_opacity 0.8
-font_family -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1
+font_family JetBrainsMono Nerd Font
 
 #breaks kde stuff
 remember_window_size no
