--- a/private_dot_config/autorandr/dual/config
+++ b/private_dot_config/autorandr/dual/config
@@ -1,8 +1,10 @@
-output DP-1
+output DP1
 off
-output DP-2
+output DP2
 off
-output eDP-1
+output VIRTUAL1
+off
+output eDP1
 crtc 0
 mode 1920x1080
 pos 0x0
@@ -13,7 +15,7 @@ x-prop-colorspace Default
 x-prop-max_bpc 12
 x-prop-non_desktop 0
 x-prop-scaling_mode Full aspect
-output HDMI-1
+output HDMI1
 crtc 1
 mode 1680x1050
 pos 1920x0
