--- a/private_dot_config/autorandr/laptop/config
+++ b/private_dot_config/autorandr/laptop/config
@@ -1,10 +1,12 @@
-output HDMI-1
+output DP1
 off
-output DP-1
+output DP2
 off
-output DP-2
+output HDMI1
 off
-output eDP-1
+output VIRTUAL1
+off
+output eDP1
 crtc 0
 mode 1920x1080
 pos 0x0
