--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -89,12 +89,11 @@ enable-ipc = true
 
 [bar/bottom]
 inherit = bar/top
-monitor = eDP-1
 bottom = true
 tray-position = right
 padding-left = 2
 modules-left = mpris mpris-prev mpris-play-pause mpris-next
-modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu temperature wlan
+modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu wlan ;temperature
 modules-right =
 
 
@@ -179,7 +178,7 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-pin-workspaces = true
+; pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = ${colors.foreground}
@@ -193,7 +192,7 @@ label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
-label-visible-padding = ${self.label-focused-padding}
+label-unfocused-padding = ${self.label-focused-padding}
 
 label-visible = %index%
 label-visible-background = ${self.label-focused-background}
@@ -203,8 +202,8 @@ label-visible-padding = ${self.label-focused-padding}
 ; urgent = Workspace with urgency hint set
 label-urgent = %name%
 label-urgent-background = ${colors.nord12}
-label-visible-underline = ${colors.alert}
-label-visible-padding = ${self.label-focused-padding}
+label-urgent-underline = ${colors.alert}
+label-urgent-padding = ${self.label-focused-padding}
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -284,7 +283,6 @@ label-volume = %percentage%%
 format-muted-prefix = "ﱝ "
 format-muted-prefix-foreground = ${colors.disabled}
 label-muted = %percentage%%
-label-muted-foreground = ${colors.nord9}
 
 ramp-volume-0 = 奄
 ramp-volume-1 = 奔
