--- a/private_dot_config/spicetify/config-xpui.ini
+++ b/private_dot_config/spicetify/config-xpui.ini
@@ -3,11 +3,11 @@ inject_css              = 1
 overwrite_assets        = 0
 spotify_launch_flags    = 
 prefs_path              = /home/botato/.config/spotify/prefs
-current_theme           = 
+current_theme           = Turntable
 replace_colors          = 1
 check_spicetify_upgrade = 0
 spotify_path            = /opt/spotify
-color_scheme            = 
+color_scheme            = nord
 
 [Preprocesses]
 remove_rtl_rule       = 1
@@ -18,7 +18,7 @@ disable_ui_logging    = 1
 
 [AdditionalOptions]
 experimental_features = 1
-extensions            = 
+extensions            = adblock.js|fixEnhance.js|friendlikes.js|fullScreen.js|genre.js|phraseToPlaylist.js|playlist-icons.js|songstats.js|turntable.js|volumePercentage.js
 custom_apps           = marketplace
 sidebar_config        = 1
 home_config           = 1
