--- a/dot_ssr/private_settings.conf
+++ b/dot_ssr/private_settings.conf
@@ -7,27 +7,27 @@ audio_backend=pulseaudio
 audio_enabled=false
 audio_jack_connect_system_capture=true
 audio_jack_connect_system_playback=false
-audio_pulseaudio_source=
+audio_pulseaudio_source=alsa_output.pci-0000_00_1f.3-platform-skl_hda_dsp_generic.HiFi__hw_sofhdadsp_5__sink.monitor
 glinject_auto_launch=false
 glinject_channel=
 glinject_command=
 glinject_limit_fps=false
 glinject_relax_permissions=false
 glinject_working_directory=
-profile=dual-monitor
-video_area=screen
+profile=single-monitor
+video_area=fixed
 video_area_follow_fullscreen=false
-video_area_screen=0
+video_area_screen=1
 video_frame_rate=30
-video_h=1080
+video_h=502
 video_record_cursor=true
 video_scale=false
 video_scaled_h=480
 video_scaled_w=854
 video_v4l2_device=/dev/video0
-video_w=3600
-video_x=0
-video_y=0
+video_w=953
+video_x=4
+video_y=539
 
 [output]
 add_timestamp=true
