Update dot_zsh/aliases Update executable_dot_fehbg Update private_dot_config/flameshot/flameshot.ini Update private_dot_config/fontconfig/fonts.conf Update private_dot_config/i3/config Update private_dot_config/polybar/config.ini Update private_dot_config/private_VSCodium/User/settings.json Update private_dot_config/rofi/config.rasi Update private_dot_config/rofi/nord.rasi Update scripts/executable_lock

--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -67,8 +67,9 @@ separator-foreground = ${colors.nord10}
 
 font-0 = JetBrainsMono Nerd Font:size=11;1
 font-1 = unifont:size=11:fontformat=truetype:antialias=false;1
-font-2 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;0
-font-3 = Noto Sans CJK JP:size=10;1
+font-2 = Material Design Icons:size=12;1
+font-3 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;1
+font-4 = Noto Sans CJK JP:size=10;1
 
 modules-left = i3 polytiramisu
 modules-center = xwindow
@@ -93,7 +94,7 @@ bottom = true
 tray-position = right
 padding-left = 2
 modules-left = mpris mpris-prev mpris-play-pause mpris-next
-modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu wlan ;temperature
+modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu wlan ipaddr ;temperature
 modules-right =
 
 
@@ -213,7 +214,7 @@ label-urgent-padding = ${self.label-focused-padding}
 type = custom/text
 content = 
 content-foreground = ${colors.secondary}
-click-left = "rofi -show p -modi p:rofi-power-menu -font 'JetBrainsMono Nerd Font 16' -width 20 -lines 6"
+click-left = rofi -show p -modi p:rofi-power-menu -font 'JetBrainsMono Nerd Font 15' -width 20 -lines 6
 
 
 [module/mpris]
@@ -330,25 +331,32 @@ format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 
 
-[network-base]
+[module/wlan]
 type = internal/network
 interval = 1
-format-connected = <ramp-signal> <label-connected>
+click-left = nmtui
+interface-type = wireless
+interface = wlp0s20f3
+
 format-disconnected = <label-disconnected>
 label-disconnected = disconnected
 
+format-connected = <ramp-signal> <label-connected>
+label-connected = %essid%
 
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#88c0d0}直%{F-} %essid% %local_ip%
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤨
+ramp-signal-foreground = ${colors.primary}
 
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %local_ip%
-
+[module/ipaddr]
+type = custom/script
+tail = true
+interval = 1
+format = <label>
+exec = ip -json route | jq '.[0].prefsrc' | sed 's/"//g' | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
 
 [module/date]
 type = internal/date
