--- a/private_dot_config/fontconfig/fonts.conf
+++ b/private_dot_config/fontconfig/fonts.conf
@@ -5,6 +5,7 @@
         <family>monospace</family>
         <prefer>
             <family>JetBrainsMono Nerd Font</family>
+            <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
             <family>Noto Sans Mono</family>
         </prefer>
@@ -12,6 +13,7 @@
     <alias>
         <family>serif</family>
         <prefer>
+            <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
             <family>Noto Sans</family>
         </prefer>
@@ -19,6 +21,7 @@
     <alias>
         <family>sans-serif</family>
         <prefer>
+            <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
             <family>Noto Sans</family>
         </prefer>
@@ -26,6 +29,7 @@
     <alias>
         <family>system-ui</family>
         <prefer>
+            <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
             <family>Noto Sans</family>
         </prefer>
