--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -16,7 +16,7 @@ exec --no-startup-id xrdb -merge $XDG_CONFIG_HOME/x11/Xresources
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+font pango:JetBrainsMono Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -24,9 +24,9 @@ font pango:monospace 10
 
 # exec --no-startup-id autotiling -w 1 3 5 7 9
 
+workspace_auto_back_and_forth yes
 
-exec_always --no-startup-id feh --bg-fill ~/wallpapers/nikocropnoartifacts.png ~/wallpapers/MilkyWay.png
-#exec_always --no-startup-id feh --bg-fill ~/wallpapers/MilkyWay.png
+exec_always --no-startup-id feh --recursive --bg-fill --randomize ~/.wallpaper
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -43,11 +43,11 @@ exec --no-startup-id unclutter -idle 10
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-#exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 #exec --no-startup-id blueman-applet
 
 exec --no-startup-id picom --experimental-backends
@@ -78,9 +78,8 @@ floating_modifier $mod
 
 # kill focused window
 bindsym $mod+w kill
-bindsym $mod+x move scratchpad; scratchpad show; scratchpad show
+bindsym $mod+x move scratchpad
 bindsym $mod+z scratchpad show
-bindsym $mod+c floating disable
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
@@ -100,13 +99,16 @@ bindsym $alt+x exec --no-startup-id "dolphin"
 bindsym $alt+t exec --no-startup-id "kitty"
 
 bindsym Print exec --no-startup-id "flameshot gui"
-#bindsym KP_Inspect exec --no-startup-id "xcolor -s"
+bindsym Insert exec --no-startup-id "rofimoji
+# "xcolor -s"
 
 #bindsym $mod+l exec --no-startup-id "loginctl lock-session ${XDG_SESSION_ID-}"
 bindsym $mod+l exec --no-startup-id "~/scripts/lock"
-#bindsym $mod+. exec --no-startup-id "rofimoji"
+bindsym $mod+Period exec --no-startup-id "rofimoji"
 
 # change focus
+bindsym $mod+u [urgent=latest] focus
+
 # bindsym $mod+j focus left
 # bindsym $mod+k focus down
 # bindsym $mod+l focus up
@@ -151,7 +153,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+#bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -199,6 +201,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
 bindsym $mod+r mode "resize"
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -225,6 +228,8 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+
+
 default_border pixel 0
 
 hide_edge_borders both
@@ -234,6 +239,8 @@ gaps inner 10
 smart_gaps on
 
 
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
 for_window [title="^Android Emulator*"] floating enable
 for_window [class="zenity"] floating enable
 for_window [class="flameshot"] floating enable
