--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ dot_zsh/dot_zinit
 dot_zsh/dot_zcompdump
 dot_zsh/env.private
 dot_zsh/aliases.private
+
+private_dot_mozilla/private_firefox/private_goe7zjsq.DefaultUser/chrome/firefox-nordic-theme
