--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -362,7 +362,8 @@ type = internal/date
 interval = 1
 
 date = %H:%M:%S
-date-alt = %Y-%m-%d
+date-alt = %a, %B %d | %d-%m-%Y
+
 
 label = %date%
 label-foreground = ${colors.primary}
