--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -93,9 +93,14 @@ inherit = bar/top
 bottom = true
 tray-position = right
 padding-left = 2
+font-0 = JetBrainsMono Nerd Font:size=11;3
+font-1 = unifont:size=11:fontformat=truetype:antialias=false;3
+font-2 = Material Design Icons:size=12;3
+font-3 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;3
+font-4 = Noto Sans CJK JP:size=10;3
 modules-left = mpris mpris-prev mpris-play-pause mpris-next
-modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu wlan ipaddr ;temperature
-modules-right =
+modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu ;temperature
+modules-right = wlan ipaddr
 
 
 
@@ -339,7 +344,9 @@ interface-type = wireless
 interface = wlp0s20f3
 
 format-disconnected = <label-disconnected>
-label-disconnected = disconnected
+label-disconnected = %essid%
+label-disconnected-prefix = 󰤮" "
+label-disconnected-prefix-foreground = ${colors.disabled}
 
 format-connected = <ramp-signal> <label-connected>
 label-connected = %essid%
