--- a/private_dot_config/fontconfig/fonts.conf
+++ b/private_dot_config/fontconfig/fonts.conf
@@ -7,6 +7,7 @@
             <family>JetBrainsMono Nerd Font</family>
             <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
+            <family>Twemoji</family>
             <family>Noto Sans Mono</family>
         </prefer>
     </alias>
@@ -15,6 +16,7 @@
         <prefer>
             <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
+            <family>Twemoji</family>
             <family>Noto Sans</family>
         </prefer>
     </alias>
@@ -23,6 +25,7 @@
         <prefer>
             <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
+            <family>Twemoji</family>
             <family>Noto Sans</family>
         </prefer>
     </alias>system-ui
@@ -31,6 +34,7 @@
         <prefer>
             <family>Material Design Icons</family>
             <family>-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1</family>
+            <family>Twemoji</family>
             <family>Noto Sans</family>
         </prefer>
     </alias>
