--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -58,13 +58,16 @@ exec --no-startup-id flameshot
 exec --no-startup-id echo "$0: DESKTOP_AUTOSTART_ID $DESKTOP_AUTOSTART_ID, registering with org.gnome.SessionManager"
 exec --no-startup-id dbus-send --session --print-reply=literal --dest=org.gnome.SessionManager "/org/gnome/SessionManager" org.gnome.SessionManager.RegisterClient "string:i3" "string:$DESKTOP_AUTOSTART_ID"
 
-exec_always --no-startup-id ~/scripts/bar
+exec_always --no-startup-id sleep 2 && ~/scripts/bar
 
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# Use playerctl to play/pause
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 
 # Use light to adjust the screen brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
