--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -99,7 +99,7 @@ font-2 = Material Design Icons:size=12;3
 font-3 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;3
 font-4 = Noto Sans CJK JP:size=10;3
 modules-left = mpris mpris-prev mpris-play-pause mpris-next
-modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu ;temperature
+modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu temperature
 modules-right = wlan ipaddr
 
 
@@ -226,9 +226,8 @@ click-left = rofi -show p -modi p:rofi-power-menu -font 'JetBrainsMono Nerd Font
 # credits to https://github.com/PrayagS/polybar-spotify/issues/12#issuecomment-756441812
 type = custom/script
 tail = true
-interval = 1
 format = <label>
-exec = ~/repos/polybar-mpris/scroll_status.sh top
+exec = ~/repos/polybar-mpris/scroll_status.sh bottom
 
 
 [module/mpris-prev]
@@ -239,10 +238,10 @@ click-left = /usr/bin/playerctl previous
 
 
 [module/mpris-play-pause]
-type = custom/script
-tail = true
-exec = ~/repos/polybar-mpris/play_pause_status.sh
-format = <label>
+type = custom/ipc
+hook-0 = echo " "
+hook-1 = echo " "
+initial = 1
 click-left = /usr/bin/playerctl play-pause
 
 
