--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -58,7 +58,7 @@ exec --no-startup-id flameshot
 exec --no-startup-id echo "$0: DESKTOP_AUTOSTART_ID $DESKTOP_AUTOSTART_ID, registering with org.gnome.SessionManager"
 exec --no-startup-id dbus-send --session --print-reply=literal --dest=org.gnome.SessionManager "/org/gnome/SessionManager" org.gnome.SessionManager.RegisterClient "string:i3" "string:$DESKTOP_AUTOSTART_ID"
 
-exec_always --no-startup-id sleep 2 && ~/scripts/bar
+exec_always --no-startup-id ~/scripts/bar
 
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
