--- a/private_dot_config/private_VSCodium/User/settings.json
+++ b/private_dot_config/private_VSCodium/User/settings.json
@@ -2,5 +2,6 @@
     "workbench.colorTheme": "Nord",
     "workbench.iconTheme": "material-icon-theme",
     "editor.fontFamily": "'Material Design Icons', 'JetBrainsMono Nerd Font', 'Noto Sans Mono', monospace",
-    "python.languageServer": "Pylance"
+    "python.languageServer": "Pylance",
+    "python.formatting.provider": "black"
 }
