Update private_dot_config/polybar/config.ini Update private_dot_config/polybar/scripts/executable_polytiramisu.sh Update private_dot_config/private_VSCodium/User/settings.json Update scripts/executable_image-b2

--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -367,7 +367,7 @@ type = internal/date
 interval = 1
 
 date = %H:%M:%S
-date-alt = %a, %B %d | %d-%m-%Y
+date-alt = %a, %B %d %{F#5e81ac}|%{F-} %{F#88c0d0}%d-%m-%Y%{F-}
 
 
 label = %date%
