Update dot_zsh/dot_zshrc Update executable_dot_xrandr-changed Update private_dot_config/autorandr/executable_postswitch Update private_dot_config/flameshot/flameshot.ini Update private_dot_config/picom/picom.conf Update private_dot_config/polybar/config.ini Update private_dot_config/polybar/scripts/executable_polytiramisu.sh Update private_dot_config/private_VSCodium/User/settings.json Update private_dot_config/private_mimeapps.list

--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -360,7 +360,8 @@ type = custom/script
 tail = true
 interval = 1
 format = <label>
-exec = ip -json route | jq '.[0].prefsrc' | sed 's/"//g' | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
+#exec = curl -s https://json.ipv4.myip.wtf | jq -r ".YourFuckingIPAddress" | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
+exec = ip -json route | jq -r '.[0].prefsrc' | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
 
 [module/date]
 type = internal/date
