--- a/private_dot_config/private_VSCodium/User/settings.json
+++ b/private_dot_config/private_VSCodium/User/settings.json
@@ -6,5 +6,7 @@
     "python.formatting.provider": "black",
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "diffEditor.ignoreTrimWhitespace": false,
+    "git.autofetch": true
 }
