--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -71,7 +71,7 @@ font-2 = Material Design Icons:size=12;1
 font-3 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;1
 font-4 = Noto Sans CJK JP:size=10;1
 
-modules-left = i3 polytiramisu
+modules-left = i3
 modules-center =
 modules-right = xwindow date powermenu
 
@@ -84,9 +84,10 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
 ; override-redirect = true
+
 
 [bar/bottom]
 inherit = bar/top
@@ -109,7 +110,7 @@ type = internal/battery
 interval = 1
 battery = BAT0
 adapter = AC
-full-at = 90
+# full-at = 90
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 format-full-prefix = " "
@@ -182,37 +183,33 @@ type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
 ; pin-workspaces = true
-
 label-mode-padding = 2
 label-mode-foreground = ${colors.foreground}
 label-mode-background = ${colors.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 2
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %icon%
 label-unfocused-padding = ${self.label-focused-padding}
-
-label-visible = %index%
+label-visible = %icon%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-background = ${colors.nord12}
 label-urgent-underline = ${colors.alert}
 label-urgent-padding = ${self.label-focused-padding}
+ws-icon-0 = terms;
+ws-icon-1 = files;
+ws-icon-2 = firefox;
+ws-icon-3 = codium;
+ws-icon-4 = spotify;阮
+ws-icon-5 = discord;ﭮ
+ws-icon-6 = chromium;
+ws-icon-default = " "
 
-; Separator in between workspaces
-; label-separator = |
 
 
 [module/powermenu]
@@ -250,13 +247,6 @@ type = custom/script
 exec = echo ""
 format = <label>
 click-left = /usr/bin/playerctl next
-
-
-[module/polytiramisu]
-type = custom/script
-exec = ~/.config/polybar/scripts/polytiramisu.sh
-format = <label>
-tail = true
 
 
 [module/xwindow]
@@ -336,19 +326,18 @@ format-prefix-foreground = ${colors.primary}
 
 [module/wlan]
 type = internal/network
-interval = 1
-click-left = nmtui
-interface-type = wireless
+click-left = /usr/bin/alacritty -e "/usr/bin/nmtui"
+interface-type = wireless 
 interface = wlp0s20f3
 
 format-disconnected = <label-disconnected>
-label-disconnected = %essid%
-label-disconnected-prefix = 󰤮" "
-label-disconnected-prefix-foreground = ${colors.disabled}
+format-disconnected-prefix = "󰤮 "
+format-disconnected-prefix-foreground = ${colors.disabled}
+label-disconnected = %ifname%
 
 format-connected = <ramp-signal> <label-connected>
 label-connected = %essid%
-
+#ramp-signal-0 = 󰤯
 ramp-signal-0 = 󰤟
 ramp-signal-1 = 󰤢
 ramp-signal-2 = 󰤥
@@ -356,19 +345,21 @@ ramp-signal-3 = 󰤨
 ramp-signal-foreground = ${colors.primary}
 
 [module/ipaddr]
-type = custom/script
-tail = true
-interval = 1
-format = <label>
-#exec = curl -s https://json.ipv4.myip.wtf | jq -r ".YourFuckingIPAddress" | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
-exec = ip -json route | jq -r '.[0].prefsrc' | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
+type = internal/network
+
+#type = custom/script
+#tail = true
+#interval = 1
+#format = <label>
+#exec = curl -s https://json.myip.wtf | jq -r ".YourFuckingIPAddress" | awk '{print "%{F#88c0d0}󰩟%{F-}",$0}'
+#%{F#88c0d0}󰩟%{F-}"
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M:%S
-date-alt = %a, %B %d %{F#5e81ac}|%{F-} %{F#88c0d0}%d-%m-%Y%{F-}
+date = %{F#88c0d0}%{F-} %H:%M:%S
+date-alt = %{F#88c0d0} %{F-} %a, %B %d %{F#5e81ac}|%{F-} %d-%m-%Y
 
 
 label = %date%
