--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -118,11 +118,11 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.7;
+inactive-opacity = 0.6;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 0.6;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
@@ -132,7 +132,7 @@ frame-opacity = 0.7;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.9
+active-opacity = 0.8
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -151,10 +151,13 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = [ "100:class_g = 'discord'" ]
+opacity-rule = [
+    "100:name = 'Picture-in-Picture'",
+    "100:name *= 'Netflix'",
+    "100:class_g = 'discord'",
+    "100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'"
+];
 
-
-#################################
 #     Background-Blurring       #
 #################################
 
@@ -188,8 +191,20 @@ blur-background = true
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-# blur-kern = "3x3box";
+blur-kern = "3x3box";
 
+blur: {
+  # requires: https://github.com/ibhagwan/picom
+  method = "dual_kawase";
+  #method = "kernel";
+  strength = 5;
+  # deviation = 1.0;
+  # kernel = "11x11gaussian";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
+}
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
