Update dot_face Update dot_ssr/private_settings.conf Update executable_dot_bash_profile Update executable_dot_bashrc Update private_dot_config/i3/config Update private_dot_config/polybar/config.ini Update private_dot_config/private_VSCodium/User/settings.json Update private_dot_mozilla/private_firefox/private_o90h44l8.default/private_user.js Update private_dot_mozilla/private_firefox/private_o90h44l8.default/user-overrides.js Update scripts/executable_image-b2 Update scripts/executable_lock Update scripts/executable_xrandrchanged.sh

--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -30,6 +30,8 @@ workspace_auto_back_and_forth yes
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex -ae i3
 
+exec --no-startup-id watch_tablet
+
 exec --no-startup-id feh -.rz --bg-scale $HOME/.wallpaper
 
 exec_always --no-startup-id $HOME/.config/i3/i3-alternating-layout/alternating_layouts.py
@@ -170,13 +172,13 @@ set $secondMonitor "HDMI1"
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 terms
-set $ws2 files
-set $ws3 firefox
-set $ws4 codium
-set $ws5 spotify
-set $ws6 discord
-set $ws7 chromium
+set $ws1 1
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
 set $ws8 8
 set $ws9 9
 set $ws10 10
