--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -55,7 +55,6 @@ line-color = ${colors.alert}
 border-size = 0
 border-color = #00000000
 
-padding-right = 2
 module-margin-right = 1
 module-margin-left = 1
 
@@ -201,14 +200,14 @@ label-urgent = %icon%
 label-urgent-background = ${colors.nord12}
 label-urgent-underline = ${colors.alert}
 label-urgent-padding = ${self.label-focused-padding}
-ws-icon-0 = terms;
-ws-icon-1 = files;
-ws-icon-2 = firefox;
-ws-icon-3 = codium;
-ws-icon-4 = spotify;阮
-ws-icon-5 = discord;ﭮ
-ws-icon-6 = chromium;
-ws-icon-default = " "
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;阮
+ws-icon-5 = 6;ﭮ
+ws-icon-6 = 7;
+ws-icon-default = ""
 
 
 
