--- a/private_dot_config/private_VSCodium/User/settings.json
+++ b/private_dot_config/private_VSCodium/User/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Ayu Mirage",
+    "workbench.colorTheme": "Nord",
     "workbench.iconTheme": "material-icon-theme",
     "editor.fontFamily": "'Material Design Icons', 'JetBrainsMono Nerd Font', 'Noto Sans Mono', monospace",
     "python.languageServer": "Pylance",
@@ -9,5 +9,6 @@
     },
     "diffEditor.ignoreTrimWhitespace": false,
     "git.autofetch": true,
-    "window.zoomLevel": 1
+    "window.zoomLevel": 1,
+    "security.workspace.trust.untrustedFiles": "open"
 }
