Update private_dot_config/polybar/config.ini Update private_dot_config/watch_tablet.yml

--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -55,6 +55,7 @@ line-color = ${colors.alert}
 border-size = 0
 border-color = #00000000
 
+padding-right = 2
 module-margin-right = 1
 module-margin-left = 1
 
@@ -93,6 +94,7 @@ inherit = bar/top
 bottom = true
 tray-position = right
 padding-left = 2
+padding-right = 0
 font-0 = JetBrainsMono Nerd Font:size=11;3
 font-1 = unifont:size=11:fontformat=truetype:antialias=false;3
 font-2 = Material Design Icons:size=12;3
